[tool.poetry]
name = "coq-autoform"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sexpdata = "^1.0.2"
pydot = "^4.0.1"
tiktoken = "^0.9.0"
openai = "^1.93.0"
tqdm = "^4.67.1"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
